2009-11-20  Jonathan Wakely  <jwakely.gcc@gmail.com>

PR libstdc++/42019
	* include/tr1/shared_ptr.h: Only use typeid when RTTI is enabled.
	* include/bits/shared_ptr_base.h: Likewise.
	* include/bits/shared_ptr.h: Likewise.
	* testsuite/tr1/2_general_utilities/shared_ptr/misc/42019.cc: New.
	* testsuite/20_util/shared_ptr/misc/42019.cc: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154377 138bc75d-0d04-0410-961f-82ee72b054a4